force-app/main/default/objects/Record_types_Danone__mdt/Record_types_Danone__mdt.object-meta.xml
<CustomObject>
    <label>Id y Record type Danone</label>
    <pluralLabel>Ids y Records types Danone</pluralLabel>
</CustomObject>