force-app/main/default/objects/Record_types_Danone__mdt/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <label>Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>