force-app/main/default/objects/Record_types_Danone__mdt/fields/Object_name__c.field-meta.xml
<CustomField>
    <fullName>Object_name__c</fullName>
    <label>Object name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>