force-app/main/default/objects/Record_types_Danone__mdt/fields/RecordType_Id__c.field-meta.xml
<CustomField>
    <fullName>RecordType_Id__c</fullName>
    <label>RecordType Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>