force-app/main/default/objects/Record_types_Danone__mdt/fields/Tipo_de_Id__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Id__c</fullName>
    <label>Tipo de Id</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Record Type</fullName>
                <default>true</default>
                <label>Record Type</label>
            </value>
            <value>
                <fullName>Cola</fullName>
            </value>
            <value>
                <fullName>Usuario</fullName>
            </value>
            <value>
                <fullName>Objeto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>